# torrra-ci-test

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  torrra.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-binaries.yml  release.yml
src/torra/: __init__.py
src/torrra/: __init__.py  __main__.py  _version.py  constants.py  context.py  downloader.py  exceptions.py  types.py  utils.py
src/torrra/cli/: config.py  main.py  torrent.py
src/torrra/core/: config.py  downloader.py
src/torrra/helpers/: html.py  intro.py
src/torrra/indexers/: __init__.py  base.py  magnetdl.py  movierulz.py  yts.py  yts_mx.py
src/torrra/utils/: html.py  styles.py
