[project]
name = "torrra"
version = "0.1.0"
description = "CLI-based torrent search and downloader"
readme = "README.md"
authors = [{ name = "stabldev" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
torrra = "torrra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
