[project]
name = "torrra"
version = "0.1.0"
description = "CLI-based torrent search and downloader"
readme = "README.md"
authors = [{ name = "stabldev" }]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "selectolax>=0.3.31",
]

[project.scripts]
torrra = "torrra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "libtorrent>=2.0.11",
]
