[project]
name = "torrra"
version = "0.2.3"
description = "A Python tool that lets you find and download torrents without leaving your CLI."
readme = "README.md"
authors = [{ name = "stabldev" }]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "libtorrent>=2.0.11",
    "libtorrent-windows-dll>=0.0.2; sys_platform == 'win32'",
    "platformdirs>=4.3.8",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "selectolax>=0.3.31",
    "tomli-w>=1.2.0",
]

[project.scripts]
torrra = "torrra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
